# robotic_arm_cube_handling

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotic_arm_cube_handling/include/robotic_arm_cube_handling/robotic_arm_cube_handling/msg/: calibration_params.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/robotic_arm_cube_handling/include/robotic_arm_cube_handling/robotic_arm_cube_handling/msg/detail/: calibration_params__functions.c  calibration_params__functions.h  calibration_params__rosidl_typesupport_fastrtps_c.h  calibration_params__struct.h  calibration_params__type_support.c  calibration_params__type_support.hpp
install/robotic_arm_cube_handling/lib/robotic_arm_cube_handling/: calibration_node.py  camera_node.py  image_processing_node.py  mqtt_publisher_node.py  publish_calibration_params.py
install/robotic_arm_cube_handling/share/ament_index/resource_index/rosidl_interfaces/: robotic_arm_cube_handling
install/robotic_arm_cube_handling/share/robotic_arm_cube_handling/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotic_arm_cube_handling/share/robotic_arm_cube_handling/cmake/: ament_cmake_export_include_directories-extras.cmake  export_robotic_arm_cube_handling__rosidl_generator_cExport.cmake  export_robotic_arm_cube_handling__rosidl_generator_pyExport.cmake  export_robotic_arm_cube_handling__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robotic_arm_cube_handling__rosidl_typesupport_fastrtps_cExport.cmake  export_robotic_arm_cube_handling__rosidl_typesupport_fastrtps_cppExport.cmake  robotic_arm_cube_handlingConfig.cmake  robotic_arm_cube_handling__rosidl_typesupport_cExport.cmake  robotic_arm_cube_handling__rosidl_typesupport_cppExport-noconfig.cmake  robotic_arm_cube_handling__rosidl_typesupport_introspection_cExport.cmake  robotic_arm_cube_handling__rosidl_typesupport_introspection_cppExport.cmake
install/robotic_arm_cube_handling/share/robotic_arm_cube_handling/launch/: camera_processing_launch.py
install/robotic_arm_cube_handling/share/robotic_arm_cube_handling/msg/: CalibrationParams.idl  CalibrationParams.json
launch/: camera_processing_launch.py
log/: latest_build
msg/: CalibrationParams.msg
src/: camera_node.py  image_processing_node.py  inverse_kinematics.py  led_controller.py  mqtt_publisher_node.py  mqtt_receiver.py  servo_control_intermediary.py  servo_control_node.py
urdf/: robotic_arm.urdf  urdf_files
