<?xml version="1.0"?>
<package format="3">
  <name>robotic_arm_cube_handling</name>
  <version>0.0.0</version>
  <description>Robot arm handling with vision using ROS 2</description>
  <maintainer email="lgmarin02@hotmail.com">SrGus</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>launch</exec_depend>

  <exec_depend>adafruit-circuitpython-pca9685</exec_depend>
  <exec_depend>adafruit-circuitpython-motor</exec_depend>
  <exec_depend>adafruit-blinka</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>

  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
